--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,15 @@ myenv/
 venv/
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+.env
+.git
+.gitignore
+node_modules/
+*.log
+*.DS_Store
+media/*
+logs/*
