--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -63,6 +63,7 @@ jobs:
         gcloud compute instance-groups managed rolling-action start-update ${{ secrets.MIG_NAME }} \
           --project=${{ secrets.PROJECT_ID }} \
           --zone=${{ secrets.ZONE }} \
+          --version=template=$TEMPLATE_NAME \
           --max-surge=1 \
           --max-unavailable=0
     
