--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -50,6 +50,7 @@ jobs:
         gcloud compute images create $IMAGE_NAME \
           --source-disk=vm1 \
           --source-disk-zone=${{ secrets.ZONE }}
+          --project=$PROJECT_ID
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
     # 6. Create new instance template
