--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -36,7 +36,6 @@ jobs:
     - name: Create deployment archive
       run: |
         # Create tar archive with all your code
-         # Simple and robust approach
         set +e
         tar -czf app.tar.gz \
           --exclude='.git*' \
@@ -55,8 +54,7 @@ jobs:
           set -e
         else
           echo "❌ Failed to create archive"
-          .
-        exit 1
+          exit 1
         fi
       
     - name: Build Custom Image
@@ -73,14 +71,19 @@ jobs:
           packer-template.pkr.hcl
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
         
-    # Rest of your steps remain the same...
     - name: Create new Instance Template
       run: |
         TEMPLATE_NAME=hiringdog-template-$(date +%y%m%d%H%M%S)
         gcloud compute instance-templates create $TEMPLATE_NAME \
           --machine-type=e2-medium \
           --image=$IMAGE_NAME \
+          --image-project=$PROJECT_ID \
           --tags=http-server,https-server \
+          --boot-disk-size=20GB \
+          --boot-disk-type=pd-balanced \
+          --network-interface=network-tier=PREMIUM,subnet=default \
+          --service-account=default \
+          --scopes=https://www.googleapis.com/auth/devstorage.read_only,https://www.googleapis.com/auth/logging.write,https://www.googleapis.com/auth/monitoring.write,https://www.googleapis.com/auth/servicecontrol,https://www.googleapis.com/auth/service.management.readonly,https://www.googleapis.com/auth/trace.append \
           --metadata=startup-script='#!/bin/bash
             systemctl start hiringdog
             systemctl start nginx
@@ -88,6 +91,45 @@ jobs:
             curl -f http://localhost/health || exit 1
           '
         echo "TEMPLATE_NAME=$TEMPLATE_NAME" >> $GITHUB_ENV
+
+    - name: Check if MIG exists and create if needed
+      run: |
+        # Check if MIG exists
+        if ! gcloud compute instance-groups managed describe $MIG_NAME --zone=$ZONE --quiet >/dev/null 2>&1; then
+          echo "MIG $MIG_NAME does not exist. Creating it..."
+          
+          # Create health check first
+          if ! gcloud compute health-checks describe hiringdog-health-check --quiet >/dev/null 2>&1; then
+            echo "Creating health check..."
+            gcloud compute health-checks create http hiringdog-health-check \
+              --port=80 \
+              --request-path=/health \
+              --check-interval=30s \
+              --timeout=10s \
+              --unhealthy-threshold=3 \
+              --healthy-threshold=2
+          fi
+          
+          # Create the MIG
+          gcloud compute instance-groups managed create $MIG_NAME \
+            --base-instance-name=hiringdog \
+            --size=1 \
+            --template=$TEMPLATE_NAME \
+            --zone=$ZONE \
+            --health-check=hiringdog-health-check \
+            --initial-delay=300s
+          
+          # Configure auto-scaling
+          gcloud compute instance-groups managed set-autoscaling $MIG_NAME \
+            --zone=$ZONE \
+            --max-num-replicas=3 \
+            --min-num-replicas=1 \
+            --target-cpu-utilization=0.60
+          
+          echo "MIG created successfully!"
+        else
+          echo "MIG $MIG_NAME already exists. Proceeding with update..."
+        fi
         
     - name: Update MIG with new template
       run: |
@@ -112,15 +154,44 @@ jobs:
           
     - name: Verify Deployment
       run: |
+        echo "=== MIG Instance Status ==="
         gcloud compute instance-groups managed list-instances $MIG_NAME \
           --zone=$ZONE \
           --format="table(instance,status,instanceStatus)"
           
+        echo "=== Getting instance external IP ==="
+        INSTANCE_NAME=$(gcloud compute instance-groups managed list-instances $MIG_NAME \
+          --zone=$ZONE \
+          --format="value(instance)" | head -n1)
+        
+        if [ ! -z "$INSTANCE_NAME" ]; then
+          EXTERNAL_IP=$(gcloud compute instances describe $INSTANCE_NAME \
+            --zone=$ZONE \
+            --format="value(networkInterfaces[0].accessConfigs[0].natIP)")
+          echo "Instance: $INSTANCE_NAME"
+          echo "External IP: $EXTERNAL_IP"
+          
+          # Test the health endpoint
+          echo "Testing health endpoint..."
+          curl -f "http://$EXTERNAL_IP/health" || echo "Health check failed"
+        fi
+          
     - name: Cleanup Old Images
       run: |
+        echo "Cleaning up old images (keeping 5 most recent)..."
         gcloud compute images list \
           --filter="family=hiringdog-app" \
           --format="value(name)" \
           --sort-by="~creationTimestamp" \
           | tail -n +6 \
-          | xargs -r -I {} gcloud compute images delete {} --quiet
+          | xargs -r -I {} gcloud compute images delete {} --quiet || echo "No old images to cleanup"
+          
+    - name: Cleanup Old Templates
+      run: |
+        echo "Cleaning up old instance templates (keeping 5 most recent)..."
+        gcloud compute instance-templates list \
+          --filter="name~hiringdog-template-*" \
+          --format="value(name)" \
+          --sort-by="~creationTimestamp" \
+          | tail -n +6 \
+          | xargs -r -I {} gcloud compute instance-templates delete {} --quiet || echo "No old templates to cleanup"
