--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -81,7 +81,7 @@ jobs:
           --tags=http-server,https-server \
           --boot-disk-size=20GB \
           --boot-disk-type=pd-balanced \
-          --network-interface=network-tier=PREMIUM,subnet=default \
+          --network-interface=network-tier=PREMIUM,subnet=projects/$PROJECT_ID/regions/asia-south1/subnetworks/default \
           --service-account=default \
           --scopes=https://www.googleapis.com/auth/devstorage.read_only,https://www.googleapis.com/auth/logging.write,https://www.googleapis.com/auth/monitoring.write,https://www.googleapis.com/auth/servicecontrol,https://www.googleapis.com/auth/service.management.readonly,https://www.googleapis.com/auth/trace.append \
           --metadata=startup-script='#!/bin/bash
