--- a/.github/workflows/service-restart-test.yml
+++ b/.github/workflows/service-restart-test.yml
@@ -2,6 +2,9 @@ name: Manual Service Restart Test
 
 on:
   workflow_dispatch:
+  push:
+    branches: [script-sh]
+    paths: ['.github/workflows/service-restart-test.yml']
     inputs:
       service:
         description: 'Service to restart'
