--- a/.github/workflows/service-restart-test.yml
+++ b/.github/workflows/service-restart-test.yml
@@ -2,9 +2,6 @@ name: Manual Service Restart Test
 
 on:
   workflow_dispatch:
-  push:
-    branches: [script-sh]
-    paths: ['.github/workflows/service-restart-test.yml']
     inputs:
       service:
         description: 'Service to restart'
@@ -96,3 +93,7 @@ jobs:
           esac
           echo "📊 Final service status:"
           sudo systemctl status gunicorn celery celery-beat redis-server rabbitmq-server --no-pager --lines=1
+
+#push:
+    #branches: [script-sh]
+    #paths: ['.github/workflows/service-restart-test.yml']
