--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: Auto Deploy to MIG (Image-test-based)
 
 on:
   push:
-    branches: [main]
+    branches: ['feature-1']
 
 jobs:
   gce-image-deploy:
